# project_root/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-template"
version = "0.1.0"
dependencies = [
    "aiogram==3.12.0",
    "sqlalchemy==2.0.29",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "aiohttp==3.9.3",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "coverage==7.4.4",
    "ruff==0.3.4",
    "black==24.2.0",
    "mypy==1.9.0"
]

[tool.setuptools.packages.find]
where = ["bot"]

# Ruff configuration (Python linter)
[tool.ruff]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Отключаем проверку длины строк
line-length = 120

# MyPy configuration (type checker)
[tool.mypy]
strict = true
exclude = ["tests/"]
