# project_root/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-template"
version = "0.1.0"
dependencies = [
    "aiogram==3.12.0",
    "sqlalchemy==2.0.29",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "aiohttp==3.9.3",
    "pytest==8.1.1",
    "coverage>=7.4.4,<8.0",
    "pytest-cov==7.0.0",
    "pytest-asyncio==0.23.5",
    "ruff==0.3.4",
    "black==24.2.0",
    "mypy==1.9.0"
]

[tool.setuptools.packages.find]
where = ["bot"]

[tool.setuptools]
dependency-links = ["https://pypi.org/simple"]

# Ruff configuration (Python linter)
[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Длина строк (разрешаем до 120)
    "B008",  # Default argument values are mutable
]
line-length = 120
target-version = "py312"

[tool.ruff.isort]
known-first-party = ["bot"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["B011", "T201"]  # Разрешаем assert в тестах


# MyPy configuration (type checker)
[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "tests/",
    "migrations/"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
